--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ phpunit.phar
 # vagrant runtime
 /.vagrant
 
+# documentation (пока)
+/docs
+
 # ignore generated files
 /frontend/web/index.php
 /frontend/web/index-test.php
