--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
     "php": ">=5.6.0",
     "yiisoft/yii2": "~2.0.14",
     "yiisoft/yii2-bootstrap": "~2.0.0",
-    "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+    "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+    "wbraganca/yii2-fancytree-widget": "~1.0.1",
+    "ext-oci8": "*",
+    "neconix/yii2-oci8": "1.*",
+    "ext-PDO": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
