--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
     "wbraganca/yii2-fancytree-widget": "~1.0.1",
+    "kartik-v/yii2-date-range": "~1.6.8",
+    "kartik-v/yii2-widget-datepicker": "~1.4.4",
+    "kartik-v/yii2-export": "~1.3.9",
+    "kartik-v/yii2-grid": "@dev",
+    "kartik-v/yii2-editable": "^1.7.8",
     "ext-oci8": "*",
     "neconix/yii2-oci8": "1.*",
     "ext-PDO": "*"
