--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "kartik-v/yii2-export": "~1.3.9",
     "kartik-v/yii2-grid": "@dev",
     "kartik-v/yii2-editable": "^1.7.8",
+    "kartik-v/yii2-widget-fileinput": "~1.0.6",
     "ext-oci8": "*",
     "neconix/yii2-oci8": "1.*",
     "ext-PDO": "*"
