--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "yiisoft/yii2": "~2.0.14",
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+    "dmstr/yii2-adminlte-asset": "^2.5",
     "wbraganca/yii2-fancytree-widget": "~1.0.1",
     "kartik-v/yii2-date-range": "~1.6.8",
     "kartik-v/yii2-widget-datepicker": "~1.4.4",
@@ -30,6 +31,7 @@
     "kartik-v/yii2-grid": "@dev",
     "kartik-v/yii2-editable": "^1.7.8",
     "kartik-v/yii2-widget-fileinput": "~1.0.6",
+    "kartik-v/yii2-widget-select2": "~2.1.3",
     "ext-oci8": "*",
     "neconix/yii2-oci8": "1.*",
     "ext-PDO": "*"
