--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "kartik-v/yii2-export": "~1.3.9",
     "kartik-v/yii2-grid": "@dev",
     "kartik-v/yii2-editable": "^1.7.8",
+    "kartik-v/yii2-datecontrol": "~1.9.7",
     "kartik-v/yii2-widget-fileinput": "~1.0.6",
     "kartik-v/yii2-widget-select2": "~2.1.3",
     "msvdev/yii2-widget-mappicker": "~1.0.1",
@@ -40,7 +41,8 @@
     "koputo/yii2-leaflet-subgroup-plugin": "dev-master",
     "ext-oci8": "*",
     "neconix/yii2-oci8": "1.*",
-    "ext-PDO": "*"
+    "ext-PDO": "*",
+    "ext-json": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
