Иправлены модели для работы с внешней базой данных. Реализован сервис для получения текущих и "пропущеных" измерений из внешней базы данных. Реализован консольный контроллер для загрузки всего архива значений из внешней базы данных. Реализован механизм связывания по одному и целым кустом каналов измерений из внешней базы с локальными объектами. Добавлена недостающая js библиотека.

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "ext-oci8": "*",
     "neconix/yii2-oci8": "1.*",
     "ext-PDO": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "inpassor/yii2-daemon": "^0.3.2"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
