--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ phpunit.phar
 /backend/web/index.php
 /backend/web/index-test.php
 /backend/web/robots.txt
+
+# ignore local gui for vega server
+/frontend/web/vega
