--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
     "dmstr/yii2-adminlte-asset": "^2.5",
     "wbraganca/yii2-fancytree-widget": "~1.0.1",
+    "philippfrenzel/yii2fullcalendar": "3.9.0",
     "kartik-v/yii2-date-range": "~1.6.8",
     "kartik-v/yii2-widget-datepicker": "~1.4.4",
     "kartik-v/yii2-export": "~1.3.9",
